# miden-tutorials

./: .gitignore  README.md  contributing.md
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  index.md  miden_node_setup_tutorial.md  tutorials_summary.md
book/src/rust-client/: counter_contract_tutorial.md  create_deploy_tutorial.md  mint_consume_create_tutorial.md  mint_consume_send_tutorial.md  rust_client_tutorials.md
book/src/web-client/: create_deploy_tutorial.md  mint_consume_create_tutorial.md  mint_consume_send_tutorial.md  web_client_tutorials.md
docs/: README.md  SUMMARY.md  book.toml  index.md  miden_node_setup.md  miden_node_setup_tutorial.md  tutorials_summary.md
docs/rust-client/: about.md  counter_contract_tutorial.md  create_deploy_tutorial.md  creating_notes_in_masm_tutorial.md  custom_note_how_to.md  ephemeral_note_how_to.md  foreign_procedure_invocation_tutorial.md  mappings_in_masm_example.md  mint_consume_create_tutorial.md  public_account_interaction_tutorial.md
docs/src/: EXPORTED.md  index.md  miden_node_setup.md
docs/src/rust-client/: about.md  counter_contract_tutorial.md  oracle_tutorial.md  (+10 more)
docs/web-client/: about.md  create_deploy_tutorial.md  mint_consume_create_tutorial.md  web_client_tutorials.md
masm/accounts/: count_reader.masm  counter.masm  falcon_recover.masm  mapping_example_contract.masm  oracle_reader.masm
masm/notes/: hash_preimage_note.masm  iterative_output_note.masm
masm/scripts/: counter_script.masm  falcon_recover_script.masm  mapping_example_script.masm  oracle_reader_script.masm  reader_script.masm
node/: README.md
node/config/: genesis.toml  miden-node.toml
rust-client/: Cargo.toml  miden-client.toml
rust-client/src/: common.rs
web-client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web-client/app/: page.tsx
web-client/lib/: createMintConsume.ts  foreignProcedureInvocation.ts  incrementCounterContract.ts  multiSendWithDelegatedProver.ts  unauthenticatedNoteTransfer.ts  webClient.ts
web-client/src/: App.tsx  webClient.ts
(+8 files in other folders)
